// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalDate GraphQL should validate literal values 1`] = `
Object {
  "data": Object {
    "localDate": 17167,
  },
}
`;

exports[`LocalDate GraphQL should validate literal values 2`] = `
Object {
  "data": Object {
    "localDate": 1716,
  },
}
`;

exports[`LocalDate GraphQL should validate variable values 1`] = `
Object {
  "data": Object {
    "localDate": 42,
  },
}
`;

exports[`LocalDate GraphQL should validate variable values 2`] = `
Object {
  "data": Object {
    "localDate": 42,
  },
}
`;

exports[`LocalDate GraphQL should validate variable values 3`] = `
Object {
  "data": Object {
    "localDate": 17167,
  },
}
`;
